welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:26: error: value D is not a member of object java.awt.Color
		setCouleurBrosse(Color.D(k));
                                       ^